--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "diggzhang",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "compare-urls": "^1.0.0",
+    "moment": "^2.12.0",
+    "on-finished": "^2.3.0",
+    "request-promise-json": "^1.0.4"
+  }
 }
