--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "compare-urls": "^1.0.0",
     "moment": "^2.12.0",
     "on-finished": "^2.3.0",
-    "request-promise-json": "^1.0.4"
+    "q": "^1.4.1",
+    "request": "^2.71.0",
   }
 }
