--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "compare-urls": "^1.0.0",
     "moment": "^2.12.0",
     "on-finished": "^2.3.0",
-    "q": "^1.4.1",
-    "request": "^2.71.0",
+    "request": "^2.71.0"
   }
 }
