--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
   "author": "diggzhang",
   "license": "ISC",
   "dependencies": {
-    "moment": "^2.12.0",
     "request": "^2.71.0"
+  },
+  "devDependencies": {
+    "koa": "^1.1.2",
+    "koa-bodyparser": "^2.0.1",
+    "koa-router": "^5.2.3",
+    "supertest": "^1.2.0",
+    "co-mocha": "^1.1.2",
+    "mocha": "^2.3.4"
   }
 }
