--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "koa middleware, sniffer on request and response than request to api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/httpTest.js"
   },
   "repository": {
     "type": "git",
@@ -16,11 +16,11 @@
     "request": "^2.71.0"
   },
   "devDependencies": {
-    "koa": "^1.1.2",
-    "koa-bodyparser": "^2.0.1",
-    "koa-router": "^5.2.3",
-    "supertest": "^1.2.0",
-    "co-mocha": "^1.1.2",
-    "mocha": "^2.3.4"
+    "co-mocha": "^1.2.2",
+    "koa": "^2.5.0",
+    "koa-bodyparser": "^4.2.0",
+    "koa-router": "^7.4.0",
+    "mocha": "^2.5.3",
+    "supertest": "^1.2.0"
   }
 }
